tests/paczka1/fuzzy1/56833102.err
Error in line 18: A67 S437 95,4
Error in line 10: jw2yvd S437 92,9
Error in line 19: A67 A434 12,5
Error in line 21: A67 S986 16,2
Error in line 25: FQEizrcx A434 50,5
Error in line 23: A67 A67 18,9
Error in line 26: 72URdU1EA A67 47,9
Error in line 31: 72URdU1EA A434 27,6
Error in line 39: 72URdU1EA S986 4,8
